Table users {
  id uuid [primary key]
  username varchar
  email varchar
  bio text
  gender char(1) [note: 'M или F']
  locale varchar [note: 'Основной язык/регион']
  avatar_url varchar [note: 'URL аватара в S3']
}

Table languages {
  id serial [primary key]
  code varchar(10) [unique]
  name varchar(50)
}


Table user_languages {
  user_id uuid [not null]
  language_id int [not null]
  proficiency varchar(50) [note: 'Опционально: уровень владения']

  indexes {
    (user_id, language_id) [unique]
  }
}

Table user_social_links {
  id serial [primary key]
  user_id uuid [not null]
  platform varchar(50)
  url varchar
}

Table user_photos {
  id serial [primary key]
  user_id uuid [not null]
  photo_url varchar
  description text
}

Ref: user_languages.user_id > users.id
Ref: user_languages.language_id > languages.id
Ref: user_social_links.user_id > users.id
Ref: user_photos.user_id > users.id
